<resources>
    <string name="app_name">WePlay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in_label_and_button">Sign In</string>
    <string name="sign_in_message_label">Hi there! Nice to see you again.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="lbl_name">"Name"</string>
    <string name="lbl_surname">"Surname"</string>
    <string name="lbl_skill">"Gaming skill level"</string>
    <string name="cbox_i_agree">"I agree with the Terms of Services and Privacy Policy."</string>
    <string name="btn_continue">"Continue"</string>
    <string name="have_accont">"Have an Account? "</string>
    <string name="lbl_language">"Language"</string>
    <string name="lbl_theme">"Theme"</string>
    <string name="lbl_radius">"Search in Radius"</string>
    <string name="lbl_notifications">"Receive Notifications"</string>
    <string name="lbl_skills">"My Skills"</string>
    <string name="lbl_hide_mail">"Hide my E-mail"</string>
    <string name="map_key">AIzaSyDq7qhfF3VnG4qBTA9UvmGg99sHeDIjMwc</string>

    <string-array name="gamingRooms">
        <item>GamingRoom</item>
        <item>GamingR00m</item>
        <item>G4m1ngR00m</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="lbl_comm">Your comment</string>
    <string name="myLoaction">Moja lokacija</string>
    <string name="alert_title">Ukljuci lokaciju</string>
    <string name="alert_message">Molimo Vas da ukljucite lokaciju da bi aplikacija mogla normalno da funckionise</string>


</resources>
